--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -11,13 +11,15 @@ io.jmix.ai.backend.entity/User.timeZoneId=Time zone
 io.jmix.ai.backend.entity/User.active=Active
 io.jmix.ai.backend.entity/User.version=Version
 
-io.jmix.ai.backend.view.main/MainView.title=Jmix Ai Backend
-io.jmix.ai.backend.view.main/applicationTitle.text=Jmix Ai Backend
+io.jmix.ai.backend.view.main/MainView.title=Jmix AI Backend
+io.jmix.ai.backend.view.main/applicationTitle.text=Jmix AI Backend
 io.jmix.ai.backend.view.main/navigation.ariaLabel=Views
 io.jmix.ai.backend.view.main/drawerToggle.ariaLabel=Menu toggle
 
-io.jmix.ai.backend.view.login/LoginView.title=Login - Jmix Ai Backend
-io.jmix.ai.backend.view.login/loginForm.headerTitle=Jmix Ai Backend
+io.jmix.ai.backend.view.chat/chatView.title=Chat
+
+io.jmix.ai.backend.view.login/LoginView.title=Login - Jmix AI Backend
+io.jmix.ai.backend.view.login/loginForm.headerTitle=Jmix AI Backend
 io.jmix.ai.backend.view.login/loginForm.username=Username
 io.jmix.ai.backend.view.login/loginForm.password=Password
 io.jmix.ai.backend.view.login/loginForm.submit=Log in
