Add PgVector-backed vector store and UI

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -10,6 +10,10 @@ io.jmix.ai.backend.entity/User.email=Email
 io.jmix.ai.backend.entity/User.timeZoneId=Time zone
 io.jmix.ai.backend.entity/User.active=Active
 io.jmix.ai.backend.entity/User.version=Version
+io.jmix.ai.backend.entity/VectorStoreEntity=Vector store entity
+io.jmix.ai.backend.entity/VectorStoreEntity.content=Content
+io.jmix.ai.backend.entity/VectorStoreEntity.id=Id
+io.jmix.ai.backend.entity/VectorStoreEntity.metadata=Metadata
 
 io.jmix.ai.backend.view.main/MainView.title=Jmix AI Backend
 io.jmix.ai.backend.view.main/applicationTitle.text=Jmix AI Backend
@@ -36,5 +40,9 @@ io.jmix.ai.backend.view.user/confirmPassword=Confirm password
 io.jmix.ai.backend.view.user/passwordsDoNotMatch=Passwords do not match
 io.jmix.ai.backend.view.user/additionalMenu=Additional
 io.jmix.ai.backend.view.user/noAssignedRolesNotification=Assign roles to the new user
+
+io.jmix.ai.backend.view.vectorstore/vectorStoreEntityListView.title=Vector store
+io.jmix.ai.backend.view.vectorstore/vectorStoreView.title=Vector store
+
 
 io.jmix.ai.backend/menu.application.title=Application
