Improved vector store updating logic

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -20,6 +20,7 @@ io.jmix.ai.backend.view.main/applicationTitle.text=Jmix AI Backend
 io.jmix.ai.backend.view.main/navigation.ariaLabel=Views
 io.jmix.ai.backend.view.main/drawerToggle.ariaLabel=Menu toggle
 
+
 io.jmix.ai.backend.view.chat/chatView.title=Chat
 
 io.jmix.ai.backend.view.login/LoginView.title=Login - Jmix AI Backend
@@ -41,6 +42,7 @@ io.jmix.ai.backend.view.user/passwordsDoNotMatch=Passwords do not match
 io.jmix.ai.backend.view.user/additionalMenu=Additional
 io.jmix.ai.backend.view.user/noAssignedRolesNotification=Assign roles to the new user
 
+io.jmix.ai.backend.view.vectorstore/vectorStoreDetailView.title=Vector store record
 io.jmix.ai.backend.view.vectorstore/vectorStoreEntityListView.title=Vector store
 io.jmix.ai.backend.view.vectorstore/vectorStoreView.title=Vector store
 
