--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -1,5 +1,15 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+io.jmix.ai.backend.entity/ParametersEntity=Parameters entity
+io.jmix.ai.backend.entity/ParametersEntity.createdBy=Created by
+io.jmix.ai.backend.entity/ParametersEntity.createdDate=Created date
+io.jmix.ai.backend.entity/ParametersEntity.description=Description
+io.jmix.ai.backend.entity/ParametersEntity.id=Id
+io.jmix.ai.backend.entity/ParametersEntity.inUse=In use
+io.jmix.ai.backend.entity/ParametersEntity.lastModifiedBy=Last modified by
+io.jmix.ai.backend.entity/ParametersEntity.lastModifiedDate=Last modified date
+io.jmix.ai.backend.entity/ParametersEntity.systemMessage=System message
+io.jmix.ai.backend.entity/ParametersEntity.version=Version
 io.jmix.ai.backend.entity/User=User
 io.jmix.ai.backend.entity/User.id=ID
 io.jmix.ai.backend.entity/User.username=Username
@@ -22,7 +32,6 @@ io.jmix.ai.backend.view.main/drawerToggle.ariaLabel=Menu toggle
 
 
 io.jmix.ai.backend.view.chat/chatView.title=Chat
-
 io.jmix.ai.backend.view.login/LoginView.title=Login - Jmix AI Backend
 io.jmix.ai.backend.view.login/loginForm.headerTitle=Jmix AI Backend
 io.jmix.ai.backend.view.login/loginForm.username=Username
@@ -36,6 +45,10 @@ io.jmix.ai.backend.view.login/loginForm.errorPassword=Password is required
 io.jmix.ai.backend.view.login/loginForm.rememberMe=Remember me
 
 io.jmix.ai.backend.view.user/UserListView.title=Users
+
+io.jmix.ai.backend.view.parameters/parametersDetailView.title=Parameters
+io.jmix.ai.backend.view.parameters/parametersListView.title=Parameters
+
 io.jmix.ai.backend.view.user/UserDetailView.title=User
 io.jmix.ai.backend.view.user/confirmPassword=Confirm password
 io.jmix.ai.backend.view.user/passwordsDoNotMatch=Passwords do not match
