--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -5,7 +5,7 @@ io.jmix.ai.backend.entity/ParametersEntity.createdBy=Created by
 io.jmix.ai.backend.entity/ParametersEntity.createdDate=Created date
 io.jmix.ai.backend.entity/ParametersEntity.description=Description
 io.jmix.ai.backend.entity/ParametersEntity.id=Id
-io.jmix.ai.backend.entity/ParametersEntity.inUse=In use
+io.jmix.ai.backend.entity/ParametersEntity.active=Active
 io.jmix.ai.backend.entity/ParametersEntity.lastModifiedBy=Last modified by
 io.jmix.ai.backend.entity/ParametersEntity.lastModifiedDate=Last modified date
 io.jmix.ai.backend.entity/ParametersEntity.systemMessage=System message
