Chat customization with similarityThreshold and topK

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -8,7 +8,9 @@ io.jmix.ai.backend.entity/ParametersEntity.id=Id
 io.jmix.ai.backend.entity/ParametersEntity.active=Active
 io.jmix.ai.backend.entity/ParametersEntity.lastModifiedBy=Last modified by
 io.jmix.ai.backend.entity/ParametersEntity.lastModifiedDate=Last modified date
+io.jmix.ai.backend.entity/ParametersEntity.similarityThreshold=Similarity threshold
 io.jmix.ai.backend.entity/ParametersEntity.systemMessage=System message
+io.jmix.ai.backend.entity/ParametersEntity.topK=Top K
 io.jmix.ai.backend.entity/ParametersEntity.version=Version
 io.jmix.ai.backend.entity/User=User
 io.jmix.ai.backend.entity/User.id=ID
