--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -1,17 +1,28 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
-io.jmix.ai.backend.entity/ParametersEntity=Parameters entity
-io.jmix.ai.backend.entity/ParametersEntity.createdBy=Created by
-io.jmix.ai.backend.entity/ParametersEntity.createdDate=Created date
-io.jmix.ai.backend.entity/ParametersEntity.description=Description
-io.jmix.ai.backend.entity/ParametersEntity.id=Id
-io.jmix.ai.backend.entity/ParametersEntity.active=Active
-io.jmix.ai.backend.entity/ParametersEntity.lastModifiedBy=Last modified by
-io.jmix.ai.backend.entity/ParametersEntity.lastModifiedDate=Last modified date
-io.jmix.ai.backend.entity/ParametersEntity.similarityThreshold=Similarity threshold
-io.jmix.ai.backend.entity/ParametersEntity.systemMessage=System message
-io.jmix.ai.backend.entity/ParametersEntity.topK=Top K
-io.jmix.ai.backend.entity/ParametersEntity.version=Version
+io.jmix.ai.backend.entity/Parameters=Parameters entity
+io.jmix.ai.backend.entity/Parameters.createdBy=Created by
+io.jmix.ai.backend.entity/Parameters.createdDate=Created date
+io.jmix.ai.backend.entity/Parameters.description=Description
+io.jmix.ai.backend.entity/Parameters.docsToolDescription=Docs tool description
+io.jmix.ai.backend.entity/Parameters.docsToolSimilarityThreshold=Docs tool similarity threshold
+io.jmix.ai.backend.entity/Parameters.docsToolTopK=Docs tool top k
+io.jmix.ai.backend.entity/ParametersEntity.docsToolsimilarityThreshold=Docs toolsimilarity threshold
+io.jmix.ai.backend.entity/Parameters.id=Id
+io.jmix.ai.backend.entity/Parameters.active=Active
+io.jmix.ai.backend.entity/Parameters.lastModifiedBy=Last modified by
+io.jmix.ai.backend.entity/Parameters.lastModifiedDate=Last modified date
+io.jmix.ai.backend.entity/Parameters.similarityThreshold=Similarity threshold
+io.jmix.ai.backend.entity/Parameters.systemMessage=System message
+io.jmix.ai.backend.entity/Parameters.topK=Top K
+io.jmix.ai.backend.entity/Parameters.trainingsToolDescription=Trainings tool description
+io.jmix.ai.backend.entity/Parameters.trainingsToolSimilarityThreshold=Trainings tool similarity threshold
+io.jmix.ai.backend.entity/Parameters.trainingsToolTopK=Trainings tool top k
+io.jmix.ai.backend.entity/Parameters.uiSamplesToolDescription=Ui samples tool description
+io.jmix.ai.backend.entity/Parameters.uiSamplesToolSimilarityThreshold=Ui samples tool similarity threshold
+io.jmix.ai.backend.entity/Parameters.uiSamplesToolTopK=Ui samples tool top k
+io.jmix.ai.backend.entity/Parameters.useTools=Use tools
+io.jmix.ai.backend.entity/Parameters.version=Version
 io.jmix.ai.backend.entity/User=User
 io.jmix.ai.backend.entity/User.id=ID
 io.jmix.ai.backend.entity/User.username=Username
