Introduce minScore. Rewrite system prompt. Refactor retrievers. Add ChatProgressView.

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -31,6 +31,8 @@ io.jmix.ai.backend.view.main/navigation.ariaLabel=Views
 io.jmix.ai.backend.view.main/drawerToggle.ariaLabel=Menu toggle
 
 
+
+io.jmix.ai.backend.view.chat/chatProgressView.title=Chat progress
 io.jmix.ai.backend.view.chat/chatView.title=Chat
 io.jmix.ai.backend.view.login/LoginView.title=Login - Jmix AI Backend
 io.jmix.ai.backend.view.login/loginForm.headerTitle=Jmix AI Backend
