JAIB-1 Answer quality checks

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -1,5 +1,44 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+io.jmix.ai.backend.entity/Check=Check
+io.jmix.ai.backend.entity/Check.actualAnswer=Actual answer
+io.jmix.ai.backend.entity/Check.bertScore=Bert score
+io.jmix.ai.backend.entity/Check.category=Category
+io.jmix.ai.backend.entity/Check.checkDef=Check def
+io.jmix.ai.backend.entity/Check.checkRun=Check run
+io.jmix.ai.backend.entity/Check.createdBy=Created by
+io.jmix.ai.backend.entity/Check.createdDate=Created date
+io.jmix.ai.backend.entity/Check.id=Id
+io.jmix.ai.backend.entity/Check.log=Log
+io.jmix.ai.backend.entity/Check.question=Question
+io.jmix.ai.backend.entity/Check.referenceAnswer=Reference answer
+io.jmix.ai.backend.entity/Check.rougeScore=Rouge score
+io.jmix.ai.backend.entity/Check.script=Script
+io.jmix.ai.backend.entity/Check.scriptScore=Script score
+io.jmix.ai.backend.entity/CheckDef=Check def
+io.jmix.ai.backend.entity/CheckDef.active=Active
+io.jmix.ai.backend.entity/CheckDef.answer=Answer
+io.jmix.ai.backend.entity/CheckDef.bert=BERT
+io.jmix.ai.backend.entity/CheckDef.category=Category
+io.jmix.ai.backend.entity/CheckDef.createdBy=Created by
+io.jmix.ai.backend.entity/CheckDef.createdDate=Created date
+io.jmix.ai.backend.entity/CheckDef.deletedBy=Deleted by
+io.jmix.ai.backend.entity/CheckDef.deletedDate=Deleted date
+io.jmix.ai.backend.entity/CheckDef.id=Id
+io.jmix.ai.backend.entity/CheckDef.lastModifiedBy=Last modified by
+io.jmix.ai.backend.entity/CheckDef.lastModifiedDate=Last modified date
+io.jmix.ai.backend.entity/CheckDef.question=Question
+io.jmix.ai.backend.entity/CheckDef.rouge=ROUGE
+io.jmix.ai.backend.entity/CheckDef.script=Script
+io.jmix.ai.backend.entity/CheckDef.version=Version
+io.jmix.ai.backend.entity/CheckRun=Check run
+io.jmix.ai.backend.entity/CheckRun.bertScore=Bert score
+io.jmix.ai.backend.entity/CheckRun.createdBy=Created by
+io.jmix.ai.backend.entity/CheckRun.createdDate=Created date
+io.jmix.ai.backend.entity/CheckRun.id=Id
+io.jmix.ai.backend.entity/CheckRun.parameters=Parameters
+io.jmix.ai.backend.entity/CheckRun.rougeScore=Rouge score
+io.jmix.ai.backend.entity/CheckRun.scriptScore=Script score
 io.jmix.ai.backend.entity/Parameters=Parameters entity
 io.jmix.ai.backend.entity/Parameters.createdBy=Created by
 io.jmix.ai.backend.entity/Parameters.createdDate=Created date
@@ -34,6 +73,15 @@ io.jmix.ai.backend.view.main/drawerToggle.ariaLabel=Menu toggle
 
 io.jmix.ai.backend.view.chat/chatProgressView.title=Chat progress
 io.jmix.ai.backend.view.chat/chatView.title=Chat
+
+io.jmix.ai.backend.view.check/checkDetailView.title=Check
+
+io.jmix.ai.backend.view.checkdef/checkDefDetailView.title=Check definition
+io.jmix.ai.backend.view.checkdef/checkDefListView.title=Check definitions
+
+io.jmix.ai.backend.view.checkrun/checkRunDetailView.title=Check run
+io.jmix.ai.backend.view.checkrun/checkRunListView.title=Check runs
+
 io.jmix.ai.backend.view.login/LoginView.title=Login - Jmix AI Backend
 io.jmix.ai.backend.view.login/loginForm.headerTitle=Jmix AI Backend
 io.jmix.ai.backend.view.login/loginForm.username=Username
@@ -61,5 +109,7 @@ io.jmix.ai.backend.view.vectorstore/vectorStoreDetailView.title=Vector store rec
 io.jmix.ai.backend.view.vectorstore/vectorStoreEntityListView.title=Vector store
 io.jmix.ai.backend.view.vectorstore/vectorStoreView.title=Vector store
 
-
-io.jmix.ai.backend/menu.application.title=Application
+io.jmix.ai.backend/menu.config.title=Configuration
+io.jmix.ai.backend/menu.security.title=Security
+io.jmix.ai.backend/menu_config.answerChecks.description=Answer checks description
+io.jmix.ai.backend/menu_config.answerChecks.title=Answer checks
