JAIA-122 Limit input tokens and log chat requests

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -1,5 +1,13 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+io.jmix.ai.backend.entity/ChatLog=Chat log
+io.jmix.ai.backend.entity/ChatLog.completionTokens=Completion tokens
+io.jmix.ai.backend.entity/ChatLog.content=Content
+io.jmix.ai.backend.entity/ChatLog.conversationId=Conversation id
+io.jmix.ai.backend.entity/ChatLog.createdDate=Created date
+io.jmix.ai.backend.entity/ChatLog.id=Id
+io.jmix.ai.backend.entity/ChatLog.promptTokens=Prompt tokens
+io.jmix.ai.backend.entity/ChatLog.sources=Sources
 io.jmix.ai.backend.entity/Check=Check
 io.jmix.ai.backend.entity/Check.actualAnswer=Actual answer
 io.jmix.ai.backend.entity/Check.bertScore=Bert score
@@ -73,6 +81,9 @@ io.jmix.ai.backend.view.main/drawerToggle.ariaLabel=Menu toggle
 
 io.jmix.ai.backend.view.chat/chatProgressView.title=Chat progress
 io.jmix.ai.backend.view.chat/chatView.title=Chat
+
+io.jmix.ai.backend.view.chatlog/chatLogDetailView.title=Chat log
+io.jmix.ai.backend.view.chatlog/chatLogListView.title=Chat logs
 
 io.jmix.ai.backend.view.check/checkDetailView.title=Check
 
