--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -7,6 +7,7 @@ io.jmix.ai.backend.entity/ChatLog.conversationId=Conversation id
 io.jmix.ai.backend.entity/ChatLog.createdDate=Created date
 io.jmix.ai.backend.entity/ChatLog.id=Id
 io.jmix.ai.backend.entity/ChatLog.promptTokens=Prompt tokens
+io.jmix.ai.backend.entity/ChatLog.responseTime=Response time, ms
 io.jmix.ai.backend.entity/ChatLog.sources=Sources
 io.jmix.ai.backend.entity/Check=Check
 io.jmix.ai.backend.entity/Check.actualAnswer=Actual answer
