Docs tool endpoint (#2)

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -1,5 +1,7 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+io.jmix.ai.backend.controller/illegalType="Illegal type value: '%s'. Available values: %s"
+
 io.jmix.ai.backend.entity/ChatLog=Chat log
 io.jmix.ai.backend.entity/ChatLog.completionTokens=Completion tokens
 io.jmix.ai.backend.entity/ChatLog.content=Content
