Separate parameters for chat and search modes (#8)

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -59,7 +59,11 @@ io.jmix.ai.backend.entity/Parameters.active=Active
 io.jmix.ai.backend.entity/Parameters.content=Content
 io.jmix.ai.backend.entity/Parameters.lastModifiedBy=Last modified by
 io.jmix.ai.backend.entity/Parameters.lastModifiedDate=Last modified date
+io.jmix.ai.backend.entity/Parameters.targetType=Target type
 io.jmix.ai.backend.entity/Parameters.version=Version
+io.jmix.ai.backend.entity/ParametersTargetType=Parameters target type
+io.jmix.ai.backend.entity/ParametersTargetType.CHAT=Chat
+io.jmix.ai.backend.entity/ParametersTargetType.SEARCH=Search
 io.jmix.ai.backend.entity/User=User
 io.jmix.ai.backend.entity/User.id=ID
 io.jmix.ai.backend.entity/User.username=Username
