Remove script score

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -22,9 +22,7 @@ io.jmix.ai.backend.entity/Check.id=Id
 io.jmix.ai.backend.entity/Check.log=Log
 io.jmix.ai.backend.entity/Check.question=Question
 io.jmix.ai.backend.entity/Check.referenceAnswer=Reference answer
-io.jmix.ai.backend.entity/Check.semanticScore=Semantic score
-io.jmix.ai.backend.entity/Check.script=Script
-io.jmix.ai.backend.entity/Check.scriptScore=Script score
+io.jmix.ai.backend.entity/Check.score=Score
 io.jmix.ai.backend.entity/CheckDef=Check def
 io.jmix.ai.backend.entity/CheckDef.active=Active
 io.jmix.ai.backend.entity/CheckDef.answer=Answer
@@ -37,15 +35,13 @@ io.jmix.ai.backend.entity/CheckDef.id=Id
 io.jmix.ai.backend.entity/CheckDef.lastModifiedBy=Last modified by
 io.jmix.ai.backend.entity/CheckDef.lastModifiedDate=Last modified date
 io.jmix.ai.backend.entity/CheckDef.question=Question
-io.jmix.ai.backend.entity/CheckDef.script=Script
 io.jmix.ai.backend.entity/CheckDef.version=Version
 io.jmix.ai.backend.entity/CheckRun=Check run
 io.jmix.ai.backend.entity/CheckRun.createdBy=Created by
 io.jmix.ai.backend.entity/CheckRun.createdDate=Created date
 io.jmix.ai.backend.entity/CheckRun.id=Id
 io.jmix.ai.backend.entity/CheckRun.parameters=Parameters
-io.jmix.ai.backend.entity/CheckRun.semanticScore=Semantic score
-io.jmix.ai.backend.entity/CheckRun.scriptScore=Script score
+io.jmix.ai.backend.entity/CheckRun.score=Score
 io.jmix.ai.backend.entity/Parameters=Parameters entity
 io.jmix.ai.backend.entity/Parameters.createdBy=Created by
 io.jmix.ai.backend.entity/Parameters.createdDate=Created date
