Refactor answer checks (#9)

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -13,7 +13,6 @@ io.jmix.ai.backend.entity/ChatLog.responseTime=Response time, ms
 io.jmix.ai.backend.entity/ChatLog.sources=Sources
 io.jmix.ai.backend.entity/Check=Check
 io.jmix.ai.backend.entity/Check.actualAnswer=Actual answer
-io.jmix.ai.backend.entity/Check.bertScore=Bert score
 io.jmix.ai.backend.entity/Check.category=Category
 io.jmix.ai.backend.entity/Check.checkDef=Check def
 io.jmix.ai.backend.entity/Check.checkRun=Check run
@@ -23,13 +22,10 @@ io.jmix.ai.backend.entity/Check.id=Id
 io.jmix.ai.backend.entity/Check.log=Log
 io.jmix.ai.backend.entity/Check.question=Question
 io.jmix.ai.backend.entity/Check.referenceAnswer=Reference answer
-io.jmix.ai.backend.entity/Check.rougeScore=Rouge score
-io.jmix.ai.backend.entity/Check.script=Script
-io.jmix.ai.backend.entity/Check.scriptScore=Script score
+io.jmix.ai.backend.entity/Check.score=Score
 io.jmix.ai.backend.entity/CheckDef=Check def
 io.jmix.ai.backend.entity/CheckDef.active=Active
 io.jmix.ai.backend.entity/CheckDef.answer=Answer
-io.jmix.ai.backend.entity/CheckDef.bert=BERT
 io.jmix.ai.backend.entity/CheckDef.category=Category
 io.jmix.ai.backend.entity/CheckDef.createdBy=Created by
 io.jmix.ai.backend.entity/CheckDef.createdDate=Created date
@@ -39,17 +35,13 @@ io.jmix.ai.backend.entity/CheckDef.id=Id
 io.jmix.ai.backend.entity/CheckDef.lastModifiedBy=Last modified by
 io.jmix.ai.backend.entity/CheckDef.lastModifiedDate=Last modified date
 io.jmix.ai.backend.entity/CheckDef.question=Question
-io.jmix.ai.backend.entity/CheckDef.rouge=ROUGE
-io.jmix.ai.backend.entity/CheckDef.script=Script
 io.jmix.ai.backend.entity/CheckDef.version=Version
 io.jmix.ai.backend.entity/CheckRun=Check run
-io.jmix.ai.backend.entity/CheckRun.bertScore=Bert score
 io.jmix.ai.backend.entity/CheckRun.createdBy=Created by
 io.jmix.ai.backend.entity/CheckRun.createdDate=Created date
 io.jmix.ai.backend.entity/CheckRun.id=Id
 io.jmix.ai.backend.entity/CheckRun.parameters=Parameters
-io.jmix.ai.backend.entity/CheckRun.rougeScore=Rouge score
-io.jmix.ai.backend.entity/CheckRun.scriptScore=Script score
+io.jmix.ai.backend.entity/CheckRun.score=Score
 io.jmix.ai.backend.entity/Parameters=Parameters entity
 io.jmix.ai.backend.entity/Parameters.createdBy=Created by
 io.jmix.ai.backend.entity/Parameters.createdDate=Created date
