Import of check definitions #7

--- a/src/main/resources/io/jmix/ai/backend/messages_en.properties
+++ b/src/main/resources/io/jmix/ai/backend/messages_en.properties
@@ -88,6 +88,11 @@ io.jmix.ai.backend.view.check/checkDetailView.title=Check
 
 io.jmix.ai.backend.view.checkdef/checkDefDetailView.title=Check definition
 io.jmix.ai.backend.view.checkdef/checkDefListView.title=Check definitions
+io.jmix.ai.backend.view.checkdef/jsonImportUploadField.text=Import JSON
+io.jmix.ai.backend.view.checkdef/jsonImport.emptyFile=Empty file
+io.jmix.ai.backend.view.checkdef/jsonImport.success=Imported %d check definitions
+io.jmix.ai.backend.view.checkdef/jsonImport.failure=Failed to import JSON: %s
+io.jmix.ai.backend.view.checkdef/jsonExport.selectItems=Select at least one item to export to JSON file
 
 io.jmix.ai.backend.view.checkrun/checkRunDetailView.title=Check run
 io.jmix.ai.backend.view.checkrun/checkRunListView.title=Check runs
